--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
 			<id>bukkit-repo</id>
 			<url>http://repo.bukkit.org/content/groups/public/</url>
 		</repository>
+		<repository>
+			<id>sk89q-repo</id>
+			<url>http://maven.sk89q.com/repo/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -39,6 +43,13 @@
 			<artifactId>bukkit</artifactId>
 			<!-- Bukkit API Version, change if necessary -->
 			<version>1.7.9-R0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sk89q</groupId>
+			<artifactId>worldguard</artifactId>
+			<version>LATEST</version>
+			<scope>provided</scope>
+			<type>jar</type>
 		</dependency>
 	</dependencies>
 </project>
