--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 			<url>http://maven.sk89q.com/artifactory/repo/</url>
 		</repository>
 		<repository>
-			<id>vault-repo</id>
+			<id>net.milkbowl.vault-repo</id>
 			<url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
 		</repository>
 	</repositories>
@@ -57,8 +57,8 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
-			<groupId>net.milkbowl</groupId>
-			<artifactId>vault</artifactId>
+			<groupId>net.milkbowl.vault</groupId>
+			<artifactId>Vault</artifactId>
 			<version>LATEST</version>
 			<scope>provided</scope>
 			<type>jar</type>
