--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 			<url>http://maven.sk89q.com/artifactory/repo/</url>
 		</repository>
 		<repository>
-			<id>net.milkbowl.vault-repo</id>
+			<id>milkbowl.vault-repo</id>
 			<url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
 		</repository>
 	</repositories>
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>LATEST</version>
+			<version>1.4.1</version>
 			<scope>provided</scope>
 			<type>jar</type>
 		</dependency>
