--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldedit</artifactId>
-			<version>LATEST</version>
+			<version>5.6.3</version>
 			<scope>provided</scope>
 			<type>jar</type>
 		</dependency>
